Fix Italian localization strings in Git repository

--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
@@ -16,7 +16,7 @@
 ProvisioningManagementBrowserView.Title=Gestione del provisioning del browser
 EnableProviderTypeWizard.Title=Abilitazione tipo provider
 EnableProviderTypeWizard.ProviderTypeEnableSuccessMessage=Tipo provider abilitato
-EnableProviderTypeWizard.ProviderTypeEnableErrorMessage=Si è verificato un errore durante l'abilitazione dei tipi di provider
+EnableProviderTypeWizard.ProviderTypeEnableErrorMessage=Si è verificato un errore durante l''abilitazione dei tipi di provider
 EnableProviderTypePageView.Title=Seleziona tipo
 NewProviderWizard.Title=Nuovo provider
 NewProviderWizard.ProviderCreateSuccessMessage=Provider creato con successo
@@ -30,8 +30,8 @@ SourceConfigurationPageView.OU=Unità organizzativa
 SourceConfigurationPageView.Repository=Repository
 SourceConfigurationPageView.Branch=Branch
 SourceConfigurationPageView.Module=Modulo
-SourceConfigurationPageView.SelectOption-placeholder=-- seleziona un'opzione --
-ContainerConfigPresenter.LoadGAVErrorMessage=Si è verificato un errore durante la lettura delle informazioni sull'artefatto dal server: {0}
+SourceConfigurationPageView.SelectOption-placeholder=-- seleziona un''opzione --
+ContainerConfigPresenter.LoadGAVErrorMessage=Si è verificato un errore durante la lettura delle informazioni sull''artefatto dal server: {0}
 ContainerConfigPresenter.ContainerNameAlreadyInUseErrorMessage=Questo nome del contenitore è già in uso
 ContainerConfigPresenter.InvalidContainerNameErrorMessage=I nomi dei contenitori possono contenere solo lettere, numeri, trattini e due punti
 ContainerConfigPresenter.AllFieldsMustBeCompletedErrorMessage=Tutti i campi devono essere compilati correttamente
@@ -98,9 +98,9 @@ RuntimePresenter.RuntimeDeletingMessage=Eliminazione runtime
 RuntimePresenter.RuntimeDeletingForcedMessage=Eliminazione forzata runtime
 RuntimePresenter.RuntimeDeleteSuccessMessage=Runtime: {0} eliminato con successo
 RuntimePresenter.RuntimeDeleteFailedTitle=Eliminazione runtime non riuscita
-RuntimePresenter.RuntimeDeleteFailedMessage=L'operazione di eliminazione ha generato il seguente errore:<BR> {0} <BR><BR>Vuoi forzare l'eliminazione del runtime?
+RuntimePresenter.RuntimeDeleteFailedMessage=L''operazione di eliminazione ha generato il seguente errore:<BR> {0} <BR><BR>Vuoi forzare l''eliminazione del runtime?
 RuntimePresenter.RuntimeConfirmForcedDeleteTitle=Forza eliminazione runtime
-RuntimePresenter.RuntimeConfirmForcedDeleteMessage=Sei sicuro di voler forzare l'eliminazione del runtime?
+RuntimePresenter.RuntimeConfirmForcedDeleteMessage=Sei sicuro di voler forzare l''eliminazione del runtime?
 RuntimePresenter.RuntimeConfirmDeleteTitle=Elimina runtime
 RuntimePresenter.RuntimeConfirmDeleteMessage=Sei sicuro di voler eliminare il runtime?
 RuntimePresenter.RuntimeConfirmStopTitle=Arresta runtime
@@ -111,7 +111,7 @@ RuntimePresenter.PipelineExecutionShowErrorAction=Mostra errore pipeline
 RuntimePresenter.PipelineExecutionStopSuccessMessage=Esecuzione pipeline: {0} arrestata con successo
 RuntimePresenter.PipelineExecutionDeleteSuccessMessage=Esecuzione pipeline: {0} eliminata con successo
 RuntimePresenter.PipelineExecutionConfirmDeleteTitle=Elimina registrazione esecuzione pipeline
-RuntimePresenter.PipelineExecutionConfirmDeleteMessage=Sei sicuro di voler eliminare la registrazione dell'esecuzione della pipeline?
+RuntimePresenter.PipelineExecutionConfirmDeleteMessage=Sei sicuro di voler eliminare la registrazione dell''esecuzione della pipeline?
 RuntimePresenter.PipelineExecutionConfirmStopTitle=Arresta esecuzione pipeline
 RuntimePresenter.PipelineExecutionConfirmStopMessage=Sei sicuro di voler arrestare la pipeline?
-RuntimePresenter.PipelineExecutionAlreadyStoppedMessage=Sembra che l'esecuzione della pipeline sia già stata arrestata o sia terminata
+RuntimePresenter.PipelineExecutionAlreadyStoppedMessage=Sembra che l''esecuzione della pipeline sia già stata arrestata o sia terminata
