--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_it.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_it.properties
@@ -95,7 +95,7 @@ org.kie.workbench.common.dmn.api.property.styling.FontSize.description=La dimens
 #######################
 org.kie.workbench.common.dmn.api.property.dimensions.RectangleDimensionsSet.label=Dimensioni
 org.kie.workbench.common.dmn.api.property.dimensions.Height.label=Altezza
-org.kie.workbench.common.dmn.api.property.dimensions.Height.description=L'altezza della forma
+org.kie.workbench.common.dmn.api.property.dimensions.Height.description=L''altezza della forma
 org.kie.workbench.common.dmn.api.property.dimensions.Width.label=Larghezza
 org.kie.workbench.common.dmn.api.property.dimensions.Width.description=La larghezza della forma
 
@@ -109,7 +109,7 @@ org.kie.workbench.common.dmn.api.property.dmn.Description.description=La descriz
 org.kie.workbench.common.dmn.api.property.dmn.ExpressionLanguage.label=Linguaggio di Espressione
 org.kie.workbench.common.dmn.api.property.dmn.ExpressionLanguage.description=Il linguaggio di espressione
 org.kie.workbench.common.dmn.api.property.dmn.Id.label=Id
-org.kie.workbench.common.dmn.api.property.dmn.Id.description=L'identificatore della forma
+org.kie.workbench.common.dmn.api.property.dmn.Id.description=L''identificatore della forma
 org.kie.workbench.common.dmn.api.property.dmn.KnowledgeSourceType.label=Tipo di Origine della Conoscenza
 org.kie.workbench.common.dmn.api.property.dmn.KnowledgeSourceType.description=Il tipo di origine della forma
 org.kie.workbench.common.dmn.api.property.dmn.LocationURI.label=URI di Posizione
