--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_it.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_it.properties
@@ -138,7 +138,7 @@ ReferencedDataTypeWarningMessage.StrongMessage=Tutti i Tipi di Dati con il tipo 
 ReferencedDataTypeWarningMessage.RegularMessage=Sei sicuro di voler rimuovere questo Tipo di Dato?
 DataTypeNameIsDefaultTypeMessage.StrongMessage=Il nome del Tipo di Dato non può essere un tipo predefinito.
 DataTypeNameIsDefaultTypeMessage.RegularMessage=Usa un nome diverso per il Tipo di Dato.
-DataTypeSuccessfullyImportedMessage.RegularMessage=L'oggetto dati (classe Java) è stato convertito con successo in un Tipo di Dato DMN ed è stato importato.
+DataTypeSuccessfullyImportedMessage.RegularMessage=L''oggetto dati (classe Java) è stato convertito con successo in un Tipo di Dato DMN ed è stato importato.
 FlashMessagesView.Ok=OK
 FlashMessagesView.Cancel=Annulla
 DataTypeListItemView.Constraints=Vincoli: {0}
@@ -153,8 +153,8 @@ DataTypesPage.Title=Tipi di Dati
 IncludedModelsPage.Title=Modelli Inclusi
 DataTypeSearchBarView.Search=Cerca tipi di dati
 DataTypeConstraintView.AddConstraints=Aggiungi Vincoli
-DataTypeConstraintView.ConstraintsTooltip=Aggiungi vincoli per limitare e definire l'input valido per il tipo di dato
-DataTypeConstraintModalView.BodyParagraph1=Aggiungi vincoli per limitare e definire l'input valido per il 
+DataTypeConstraintView.ConstraintsTooltip=Aggiungi vincoli per limitare e definire l''input valido per il tipo di dato
+DataTypeConstraintModalView.BodyParagraph1=Aggiungi vincoli per limitare e definire l''input valido per il 
 DataTypeConstraintModalView.BodyParagraph2=tipo di dato.
 DataTypeConstraintModalView.BodyParagraph3=Seleziona il tipo di vincolo
 DataTypeConstraintModalView.Header=Vincoli del Tipo di Dato
@@ -168,7 +168,7 @@ DataTypeConstraintModalView.Cancel=Annulla
 DataTypeConstraintModalView.SelectConstraintType=Seleziona un tipo di vincolo
 DataTypeConstraintExpressionView.ForSyntaxRequirements=Per i requisiti di sintassi delle tue espressioni di vincolo, consulta la
 DataTypeConstraintExpressionView.DMNSpecification=specifica DMN
-DataTypeConstraintExpressionView.Placeholder=Inserisci un'espressione valida
+DataTypeConstraintExpressionView.Placeholder=Inserisci un''espressione valida
 DataTypeConstraintEnumerationView.Add=Aggiungi
 DataTypeConstraintEnumerationItemView.Edit=Modifica
 DataTypeConstraintEnumerationItemView.Remove=Rimuovi
@@ -182,7 +182,7 @@ DataTypeConstraintRangeView.EndValue=Valore finale
 DataTypeConstraintRangeView.IncludeStartValue=Includi valore iniziale
 DataTypeConstraintRangeView.IncludeEndValue=Includi valore finale
 DataTypeConstraintRangeView.RequiredValue=* Un intervallo ha un valore iniziale e un valore finale, entrambi i campi sono obbligatori.
-DataTypeConstraintRangeView.ProTip=Il valore ad ogni estremità dell'intervallo può essere incluso o escluso dalla definizione dell'intervallo. Se la casella di controllo è deselezionata, il valore di inizio o di fine viene escluso.
+DataTypeConstraintRangeView.ProTip=Il valore ad ogni estremità dell''intervallo può essere incluso o escluso dalla definizione dell''intervallo. Se la casella di controllo è deselezionata, il valore di inizio o di fine viene escluso.
 ConstraintPlaceholderHelper.SentenceDate=Esempio di espressione per un tipo di dato "data": (date("2019-02-01")..date("2019-02-28"))
 ConstraintPlaceholderHelper.SentenceNumber=Esempio di espressione per un tipo di dato "numero": (1..10)
 ConstraintPlaceholderHelper.SentenceString=Esempio di espressione per un tipo di dato "stringa": "mela","arancia","ananas"
@@ -190,13 +190,13 @@ ConstraintPlaceholderHelper.SentenceDayTimeDuration=Esempio di espressione per u
 ConstraintPlaceholderHelper.SentenceYearMonthDuration=Esempio di espressione per un tipo di dato "durata anni e mesi" (dove P2M rappresenta 2 mesi e P2Y rappresenta 2 anni): (duration("P2M")..duration("P2Y"))
 ConstraintPlaceholderHelper.SentenceTime=Esempio di espressione per un tipo di dato "ora": (time("16:00")..time("16:30"))
 ConstraintPlaceholderHelper.SentenceDateTime=Esempio di espressione per un tipo di dato "data e ora": (date and time("2019-02-01T16:00")..date and time("2019-02-28T17:00"))
-ConstraintPlaceholderHelper.SentenceDefault=Inserisci un'espressione valida
+ConstraintPlaceholderHelper.SentenceDefault=Inserisci un''espressione valida
 ConstraintPlaceholderHelper.SampleDate=Seleziona una data
 ConstraintPlaceholderHelper.SampleNumber=Inserisci un numero
 ConstraintPlaceholderHelper.SampleString=Inserisci una stringa
 ConstraintPlaceholderHelper.SampleDayTimeDuration=duration("PT10S")
 ConstraintPlaceholderHelper.SampleYearMonthDuration=Inserisci un valore
-ConstraintPlaceholderHelper.SampleTime=Inserisci un'ora
+ConstraintPlaceholderHelper.SampleTime=Inserisci un''ora
 ConstraintPlaceholderHelper.SampleDateTime=time("2019-02-28T17:00")
 ConstraintPlaceholderHelper.SampleDefault=Inserisci un valore
 IncludedModelsPageView.Title=Modelli Inclusi
@@ -231,7 +231,7 @@ TimeSelectorView.None=Nessuno
 TimeSelectorView.SelectTimeZone=Seleziona fuso orario
 TimeSelectorView.SelectUTCOffset=Seleziona offset UTC
 IncludedModelModalView.Header=Includi modello
-IncludedModelModalView.Description=I modelli che sono stati aggiunti alla directory del progetto possono essere inclusi in questo file DMN. I componenti del diagramma dei requisiti decisionali dei modelli DMN inclusi saranno disponibili per l'uso in questo file DMN. I modelli PMML saranno disponibili per l'invocazione tramite funzioni DMN.
+IncludedModelModalView.Description=I modelli che sono stati aggiunti alla directory del progetto possono essere inclusi in questo file DMN. I componenti del diagramma dei requisiti decisionali dei modelli DMN inclusi saranno disponibili per l''uso in questo file DMN. I modelli PMML saranno disponibili per l''invocazione tramite funzioni DMN.
 IncludedModelModalView.DMNModelsLabel=Modelli
 IncludedModelModalView.UniqueNameLabel=Fornisci un nome univoco
 IncludedModelModalView.Include=Includi
@@ -284,7 +284,7 @@ DMNPreviewDiagramDock.Title=Esplora diagramma
 DMNDocumentationView.DownloadHtmlFile=Scarica file .HTML
 ImportDataObjectModalView.Header=Importa Oggetto Dati
 ImportDataObjectModalView.Note=Nota:
-ImportDataObjectModalView.NoteText=Questa azione è un'importazione una tantum. Se l'Oggetto Dati viene aggiornato, sarà necessario importarlo nuovamente per riflettere le modifiche nel rispettivo tipo di dato.
+ImportDataObjectModalView.NoteText=Questa azione è un''importazione una tantum. Se l''Oggetto Dati viene aggiornato, sarà necessario importarlo nuovamente per riflettere le modifiche nel rispettivo tipo di dato.
 ImportDataObjectModalView.Cancel=Annulla
 ImportDataObjectModalView.Import=Importa
 ImportDataObjectModalView.ClearSelection=Cancella selezione
