--- a/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
@@ -16,7 +16,7 @@ FieldProperties.validateOnChange=Convalida al cambio del valore del campo
 FieldProperties.maxLength=Lunghezza massima
 FieldProperties.placeHolder=Segnaposto
 FieldProperties.helpMessage=Messaggio di aiuto
-FieldProperties.helpMessage.helpMessage=Utilizzare questo campo per impostare il messaggio di aiuto (supporta il formato HTML) che apparirà accanto all'etichetta del campo.
+FieldProperties.helpMessage.helpMessage=Utilizzare questo campo per impostare il messaggio di aiuto (supporta il formato HTML) che apparirà accanto all''etichetta del campo.
 FieldProperties.defaultValue=Valore predefinito
 FieldProperties.rows=Righe visibili
 FieldProperties.addEmptyOption=Aggiungi opzione vuota predefinita
