--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
@@ -20,7 +20,7 @@ FormEditorViewImpl.dontSave=Non salvare
 FormEditorViewImpl.preview=Anteprima
 FormEditorViewImpl.saveBeforeRename=Vuoi salvare le modifiche correnti prima di rinominare? Se no, tutte le modifiche andranno perse
 
-FormEditorPresenter.unexpectedError=Si è verificato un errore imprevisto durante il caricamento del modulo corrente, prova a chiudere il modulo e aprirlo nuovamente. Se l'errore persiste, contatta l'amministratore e verifica se ci sono
+FormEditorPresenter.unexpectedError=Si è verificato un errore imprevisto durante il caricamento del modulo corrente, prova a chiudere il modulo e aprirlo nuovamente. Se l''errore persiste, contatta l''amministratore e verifica se ci sono
 FormEditorPresenter.formUsages= Modulo: <B><I>{0}</I></B> è utilizzato nelle seguenti risorse, vuoi comunque eliminarlo?
 FormEditorPresenter.layoutTitle=Crea un nuovo modulo
 FormEditorPresenter.layoutSubTitle=Trascina un componente qui per iniziare a creare un nuovo modulo.
@@ -41,13 +41,13 @@ FormDefinitionResourceType.formTypeDescription=Moduli
 DataObjectsAdminViewImpl.dataObjectID=Identificatore oggetto dati
 DataObjectsAdminViewImpl.dataObjectType=Tipo oggetto dati
 DataObjectsAdminViewImpl.addDataObject=Aggiungi oggetto dati
-DataObjectsAdminViewImpl.idCannotBeEmpty=L'ID dell'oggetto dati non può essere vuoto.
-DataObjectsAdminViewImpl.idAreadyExists=L'ID dell'oggetto dati deve essere univoco, esiste già un oggetto dati con lo stesso ID.
+DataObjectsAdminViewImpl.idCannotBeEmpty=L''ID dell''oggetto dati non può essere vuoto.
+DataObjectsAdminViewImpl.idAreadyExists=L''ID dell''oggetto dati deve essere univoco, esiste già un oggetto dati con lo stesso ID.
 DataObjectsAdminViewImpl.typeCannotBeEmpty=Il tipo di oggetto dati non può essere vuoto.
 DataObjectsAdminViewImpl.emptyDataObjectsTable=Nessun oggetto dati configurato.
 DataObjectsAdminViewImpl.remove=Rimuovi
-DataObjectsAdminViewImpl.dataObjectIsBoundMessage=L'oggetto dati specificato è associato a alcuni campi. Sei sicuro di volerlo rimuovere?
-DataObjectsAdminViewImpl.areYouSureRemoveDataObject=Sei sicuro di voler rimuovere l'oggetto dati specificato?
+DataObjectsAdminViewImpl.dataObjectIsBoundMessage=L''oggetto dati specificato è associato a alcuni campi. Sei sicuro di volerlo rimuovere?
+DataObjectsAdminViewImpl.areYouSureRemoveDataObject=Sei sicuro di voler rimuovere l''oggetto dati specificato?
 
 FieldPropertiesRendererViewImpl.title=Proprietà campo
 FieldPropertiesRendererViewImpl.fieldType=Tipo campo
@@ -59,7 +59,7 @@ NewPropertiesDisplayerViewIpml.newFormFieldsAvailable=Nuovi campi modulo disponi
 
 ConflictsDisplayerViewIpml.conflicts=I seguenti campi presentano conflitti che devono essere risolti:
 ModelProperty.removed1=: La proprietà del modello a cui era associato ('{0}') è stata rimossa.
-ModelProperty.removed2=Il campo non verrà rimosso dal modulo, ma l'associazione verrà modificata per evitare problemi. Per favore, modifica le proprietà del campo e associale a una proprietà esistente.
+ModelProperty.removed2=Il campo non verrà rimosso dal modulo, ma l''associazione verrà modificata per evitare problemi. Per favore, modifica le proprietà del campo e associale a una proprietà esistente.
 ModelProperty.typeConflict1=: La proprietà del modello a cui era associato ('{0}') ha cambiato il tipo in un tipo che il campo del modulo non supporta.
 ModelProperty.typeConflict2=Il campo del modulo verrà cambiato nel tipo di campo corretto. Per favore, modifica le proprietà del campo e verifica che le impostazioni siano corrette.
 
@@ -73,10 +73,10 @@ showLess=Nascondi dettagli
 
 ErrorMessageDisplayerViewImpl.title=Errore
 ErrorMessageDisplayerViewImpl.errorMessage=Si è verificato un errore durante il caricamento del modulo:
-ErrorMessageDisplayerViewImpl.close=Chiudi l'editor dei moduli (consigliato)
-ErrorMessageDisplayerViewImpl.closeAndReview=Chiudi l'editor dei moduli e verifica il {0} (consigliato)
-ErrorMessageDisplayerViewImpl.continue=Procedi con l'editor dei moduli
+ErrorMessageDisplayerViewImpl.close=Chiudi l''editor dei moduli (consigliato)
+ErrorMessageDisplayerViewImpl.closeAndReview=Chiudi l''editor dei moduli e verifica il {0} (consigliato)
+ErrorMessageDisplayerViewImpl.continue=Procedi con l''editor dei moduli
 
-FormEditorService.shortKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l'amministratore.
-FormEditorService.longKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l'amministratore. <br/>Messaggio di errore completo: <br/>{0}
+FormEditorService.shortKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l''amministratore.
+FormEditorService.longKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l''amministratore. <br/>Messaggio di errore completo: <br/>{0}
 FormEditorPresenter.propertiesEditor=Proprietà campo
