--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_it.properties
@@ -14,12 +14,12 @@
 # limitations under the License.
 #
 
-DataObjectFormModelCreationViewImpl.SelectDataObject=Seleziona l'oggetto dati dal progetto:
+DataObjectFormModelCreationViewImpl.SelectDataObject=Seleziona l''oggetto dati dal progetto:
 DataObjectFormModelCreationPresenter.InvalidDataObject=Non è stato selezionato alcun oggetto dati
 org.kie.workbench.common.forms.data.modeller.model.DataObjectFormModel=Oggetto dati
-DataObjectFormModelHandler.shortMessage=Impossibile trovare l'oggetto dati '{0}' nel progetto.
-DataObjectFormModelHandler.fullMessage=Impossibile trovare l'oggetto dati '{0}' nel progetto. \
-  <br/>Questo di solito significa che l'oggetto dati è stato rimosso o che c'è un problema di compilazione nel progetto. \
-  <br/>Verifica che l'oggetto dati esista e riapri il modulo, se l'errore persiste, contatta l'amministratore. \
+DataObjectFormModelHandler.shortMessage=Impossibile trovare l''oggetto dati '{0}' nel progetto.
+DataObjectFormModelHandler.fullMessage=Impossibile trovare l''oggetto dati '{0}' nel progetto. \
+  <br/>Questo di solito significa che l''oggetto dati è stato rimosso o che c''è un problema di compilazione nel progetto. \
+  <br/>Verifica che l''oggetto dati esista e riapri il modulo, se l''errore persiste, contatta l''amministratore. \
   <br/>Se il modulo non è più necessario, eliminatelo per evitare possibili problemi.
 DataObjectFormModelHandler.dataObject=Oggetto dati
