--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_it.properties
@@ -11,13 +11,13 @@ org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Form Atti
 MissingProcess.shortMessage=Impossibile trovare il Processo con ID '{0}' nel progetto.
 MissingProcess.fullMessage=Impossibile trovare il Processo con ID '{0}' nel progetto. \
   <br/>Questo di solito significa che il processo è stato rimosso o è malformato. Chiudi il Form e verifica che il processo \
-  esista, quindi riapri il Form. Se l'errore persiste, contatta l'amministratore o genera nuovamente il Form. \
+  esista, quindi riapri il Form. Se l''errore persiste, contatta l''amministratore o genera nuovamente il Form. \
   <br/>Se il Form non è più necessario, eliminalo per evitare possibili problemi.
 
-MissingTask.shortMessage=Impossibile trovare l'Attività con nome '{0}' nel Processo '{1}'.
-MissingTask.fullMessage=Impossibile trovare l'Attività con nome '{0}' nel Processo '{1}'. \
-  <br/>Questo di solito significa che l'Attività è stata rimossa dal Processo o il Form è stato generato prima che il processo \
-  fosse salvato. <br/>Chiudi il Form e verifica che l'Attività esista nel Processo, salva il Processo e rigenera il Form. \
+MissingTask.shortMessage=Impossibile trovare l''Attività con nome '{0}' nel Processo '{1}'.
+MissingTask.fullMessage=Impossibile trovare l''Attività con nome '{0}' nel Processo '{1}'. \
+  <br/>Questo di solito significa che l''Attività è stata rimossa dal Processo o il Form è stato generato prima che il processo \
+  fosse salvato. <br/>Chiudi il Form e verifica che l''Attività esista nel Processo, salva il Processo e rigenera il Form. \
   <br/>Se il Form non è più necessario, eliminalo per evitare possibili problemi.
 
 process=Processo
