--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_it.properties
@@ -24,20 +24,20 @@ ArchetypeManagement.EmptyFieldValidation=Il campo "{0}" non deve essere vuoto.
 ArchetypeManagement.ArchetypeAddedMessage=Archetipo aggiunto con successo.
 ArchetypeManagement.ArchetypeDeletedMessage=Archetipo eliminato con successo.
 ArchetypeManagement.ArchetypeValidatedMessage=Archetipo convalidato con successo.
-ArchetypeManagement.ArchetypeAlreadyExistsMessage=C'è già un archetipo aggiunto con le informazioni fornite.
-ArchetypeManagement.InvalidArchetypeExceptionMessage=L'archetipo fornito non può essere aggiunto perché non è un modulo KIE valido.
+ArchetypeManagement.ArchetypeAlreadyExistsMessage=C''è già un archetipo aggiunto con le informazioni fornite.
+ArchetypeManagement.InvalidArchetypeExceptionMessage=L''archetipo fornito non può essere aggiunto perché non è un modulo KIE valido.
 ArchetypeManagement.MavenExecutionExceptionMessage=Dettagli errore: {0}
 ArchetypeManagement.DeleteArchetypeTitle=Elimina Archetipo
 ArchetypeManagement.DeleteArchetypeMessage=Sei sicuro di voler eliminare definitivamente questo archetipo? Questa azione non può essere annullata.
 ArchetypeManagement.OfN=di {0}
 ArchetypeManagement.ItemCountIndicatorText={0}-{1} di {2}
-ArchetypeManagement.IncludeTooltip=Seleziona questa casella per rendere l'archetipo disponibile per l'uso.
-ArchetypeManagement.GroupIdTooltip=ID del Gruppo dell'archetipo.
-ArchetypeManagement.ArtifactIdTooltip=ID dell'Artefatto dell'archetipo.
-ArchetypeManagement.VersionTooltip=Versione dell'archetipo.
-ArchetypeManagement.CreatedDateTooltip=Data di creazione dell'archetipo.
-ArchetypeManagement.StatusTooltip=Stato dell'archetipo.
-ArchetypeManagement.ActionsTooltip=Azioni disponibili da eseguire sull'archetipo.
+ArchetypeManagement.IncludeTooltip=Seleziona questa casella per rendere l''archetipo disponibile per l''uso.
+ArchetypeManagement.GroupIdTooltip=ID del Gruppo dell''archetipo.
+ArchetypeManagement.ArtifactIdTooltip=ID dell''Artefatto dell''archetipo.
+ArchetypeManagement.VersionTooltip=Versione dell''archetipo.
+ArchetypeManagement.CreatedDateTooltip=Data di creazione dell''archetipo.
+ArchetypeManagement.StatusTooltip=Stato dell''archetipo.
+ArchetypeManagement.ActionsTooltip=Azioni disponibili da eseguire sull''archetipo.
 ArchetypeManagement.SelectionCounter={0} di {1} selezionati
 ArchetypeManagement.ValidMessage=Questo archetipo è valido
 ArchetypeManagement.InvalidMessage=Questo archetipo non è valido - Motivo: {0}
@@ -56,4 +56,4 @@ ArchetypeItemView.Delete=Elimina
 ArchetypeItemView.Validate=Convalida
 ArchetypeItemView.SetAsDefault=Imposta come predefinito
 ArchetypeItemView.Default=D
-AddArchetypeModalView.ArchetypeCouldNotBeAdded=L'archetipo non può essere aggiunto.
+AddArchetypeModalView.ArchetypeCouldNotBeAdded=L''archetipo non può essere aggiunto.
