--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_it.properties
@@ -64,10 +64,10 @@ GroupIdExample=Esempio: com.miaorganizzazione.mieiprogetti
 GroupIdMoreInfo=Un identificatore univoco per un progetto. È normale utilizzare un nome di pacchetto completamente qualificato per distinguerlo da altri progetti con un nome simile.
 ArtifactID=ID artefatto
 ArtifactIDExample=Esempio: MioProgetto
-ArtifactIDMoreInfo=L'identificatore per questo artefatto che è univoco all'interno del gruppo dato dall'ID del gruppo. Un artefatto è qualcosa che viene prodotto o utilizzato da un progetto. Esempi di artefatti prodotti da Maven per un progetto includono: JAR, distribuzioni sorgente e binarie e WAR.
+ArtifactIDMoreInfo=L''identificatore per questo artefatto che è univoco all''interno del gruppo dato dall''ID del gruppo. Un artefatto è qualcosa che viene prodotto o utilizzato da un progetto. Esempi di artefatti prodotti da Maven per un progetto includono: JAR, distribuzioni sorgente e binarie e WAR.
 Version=Versione
 VersionExample=1.0.0
-VersionMoreInfo=La versione corrente dell'artefatto prodotto da questo progetto.
+VersionMoreInfo=La versione corrente dell''artefatto prodotto da questo progetto.
 MoreInfo=Maggiori informazioni
 Dependencies=Dipendenze
 AddFromRepository=Aggiungi da repository
@@ -77,9 +77,9 @@ newProjectDescription=Progetto
 newPackageDescription=Pacchetto
 NoRepositorySelectedPleaseSelectARepository=Nessun repository selezionato. Seleziona un repository.
 XMLMarkIsNotAllowed=I segni di markup XML ">", "<" e "&" non sono consentiti in GAV
-GroupIdMissing=L'ID del gruppo deve contenere un valore valido
-ArtifactIdMissing=L'ID dell'artefatto deve contenere un valore valido
-VersionMissing=L'ID della versione deve contenere un valore valido
+GroupIdMissing=L''ID del gruppo deve contenere un valore valido
+ArtifactIdMissing=L''ID dell''artefatto deve contenere un valore valido
+VersionMissing=L''ID della versione deve contenere un valore valido
 ProjectScreen=Schermata del progetto
 NewProject=Nuovo progetto
 PleaseSelectAnItem=Seleziona un elemento
@@ -108,14 +108,14 @@ IncludedKnowledgeBases=Basi KIE incluse
 Stateful=Stateful
 Stateless=Stateless
 State=Stato
-WorkItemHandler=Gestore dell'elemento di lavoro
+WorkItemHandler=Gestore dell''elemento di lavoro
 Default=Predefinito
 Options=Opzioni
 ConsoleLogger=Logger console
 FileLogger=Logger file
 Interval=Intervallo
 WorkingMemoryEventListener=Ascoltatore degli eventi di runtime delle regole
-AgendaEventListener=Ascoltatore degli eventi dell'agenda
+AgendaEventListener=Ascoltatore degli eventi dell''agenda
 ProcessEventListener=Ascoltatore degli eventi del processo
 Kind=Tipo
 Type=Tipo
@@ -131,8 +131,8 @@ Refreshing=Aggiornamento in corso...
 ABuildIsAlreadyRunning=Una build è già in corso
 XsdIDError=Il nome deve iniziare con una lettera o un underscore e non può contenere altri caratteri oltre a lettere, cifre, underscore, trattini e punti.
 NoDependencies=Nessuna dipendenza definita.
-EnterAGroupID=Inserisci l'ID del gruppo...
-EnterAnArtifactID=Inserisci l'ID dell'artefatto...
+EnterAGroupID=Inserisci l''ID del gruppo...
+EnterAnArtifactID=Inserisci l''ID dell''artefatto...
 EnterAVersion=Inserisci la versione...
 ExceptionPackageAlreadyExists0=Il pacchetto "{0}" esiste già.
 ProjectStructure=Struttura del progetto
@@ -152,7 +152,7 @@ WhiteList=White list del pacchetto
 SomePackagesIncluded=Alcuni pacchetti inclusi
 Repositories=Repository
 RepositoriesValidation=Validazione
-RepositoriesValidationExplanationL1=Questi repository Maven vengono utilizzati per verificare l'unicità di un GAV di un progetto quando (1) si crea un nuovo progetto o modulo, \
+RepositoriesValidationExplanationL1=Questi repository Maven vengono utilizzati per verificare l''unicità di un GAV di un progetto quando (1) si crea un nuovo progetto o modulo, \
   (2) si installa o distribuisce un progetto in un repository Maven.
 RepositoriesValidationExplanationL2=Vengono ottenuti dal pom del progetto, dalla configurazione di gestione della distribuzione del progetto e dalle impostazioni globali di Maven.
 RepositoryInclude=Includi
@@ -162,14 +162,14 @@ DependencyIsMissingAnArtifactId=La dipendenza non ha un ID artefatto
 DependencyIsMissingAGroupId=La dipendenza non ha un ID gruppo
 Dependency=Dipendenza
 DeploySuccessful=Deploy nella configurazione del server riuscito
-StartContainer=Avviare l'unità di distribuzione?
+StartContainer=Avviare l''unità di distribuzione?
 NoServersAvailableForProvisioning=Impossibile effettuare il provisioning perché non ci sono server attivi disponibili
-ContainerIdAlreadyInUse=Il nome dell'unità è già in uso, scegli un nome diverso.
+ContainerIdAlreadyInUse=Il nome dell''unità è già in uso, scegli un nome diverso.
 ProjectPreferences=Preferenze del progetto
 DeployFailed=Deploy nella configurazione del server non riuscito.
 DeploymentSkippedDueToNoServerTemplateConfiguredForMode=Il deploy è stato saltato, impossibile trovare alcun server in esecuzione in modalità "{0}".
-DeploymentSkippedCannotUpdateDeploymentsOnProduction=Il deploy è stato saltato, non è consentito aggiornare i deploy su server in esecuzione in modalità 'produzione'.
-DeploySuccessfulButContainerFailedToStart=Deploy nella configurazione del server riuscito ma l'unità non è riuscita ad avviarsi.
+DeploymentSkippedCannotUpdateDeploymentsOnProduction=Il deploy è stato saltato, non è consentito aggiornare i deploy su server in esecuzione in modalità ''produzione''.
+DeploySuccessfulButContainerFailedToStart=Deploy nella configurazione del server riuscito ma l''unità non è riuscita ad avviarsi.
 DeploySuccessfulAndContainerStarted=Deploy nella configurazione del server riuscito e unità avviata correttamente.
 DeploySuccessfulAndContainerUpdated=Deploy nella configurazione del server riuscito e unità aggiornata correttamente.
 ViewDeploymentDetails=Visualizza dettagli del deploy
