--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_it.properties
@@ -25,9 +25,9 @@ ClientRuntimeStrategy.PerProcessInstance=Per istanza di processo
 ClientRuntimeStrategy.PerCase=Per caso
 ContainerProcessConfigView.Cancel=Annulla
 ContainerProcessConfigView.Save=Salva
-ContainerProcessConfigView.SaveErrorMessage=Errore durante l'aggiornamento dell'unità di distribuzione.
-ContainerProcessConfigView.SaveSuccessMessage=L'unità di distribuzione è stata aggiornata.
-ContainerRulesConfigView.IntervalTextBoxDataOriginalTitle=L'unità di tempo è il secondo
+ContainerProcessConfigView.SaveErrorMessage=Errore durante l''aggiornamento dell''unità di distribuzione.
+ContainerProcessConfigView.SaveSuccessMessage=L''unità di distribuzione è stata aggiornata.
+ContainerRulesConfigView.IntervalTextBoxDataOriginalTitle=L''unità di tempo è il secondo
 ContainerRulesConfigView.IntervalTextBoxPlaceholder=Intervallo
 ContainerRulesConfigView.Milliseconds=Millisecondi
 ContainerRulesConfigView.Seconds=Secondi
@@ -42,9 +42,9 @@ ContainerRulesConfigView.StartScannerErrorMessage=Avvio scanner fallito.
 ContainerRulesConfigView.StopScanner=Arresta scanner
 ContainerRulesConfigView.StopScannerErrorMessage=Arresto scanner fallito.
 ContainerRulesConfigView.Upgrade=Aggiorna
-ContainerRulesConfigView.UpgradeContainerMessage=L'aggiornamento di un'unità di distribuzione con processi attivi causerà errori (per preservare l'integrità, il processo non può essere aggiornato automaticamente).
-ContainerRulesConfigView.UpgradeErrorMessage=L'aggiornamento ha fallito.
-ContainerRulesConfigView.UpgradeSuccessMessage=L'unità di distribuzione è stata aggiornata con successo alla versione: {0}
+ContainerRulesConfigView.UpgradeContainerMessage=L''aggiornamento di un''unità di distribuzione con processi attivi causerà errori (per preservare l''integrità, il processo non può essere aggiornato automaticamente).
+ContainerRulesConfigView.UpgradeErrorMessage=L''aggiornamento ha fallito.
+ContainerRulesConfigView.UpgradeSuccessMessage=L''unità di distribuzione è stata aggiornata con successo alla versione: {0}
 ContainerRulesConfigView.Version=Versione
 ContainerRulesConfigView.VersionTextBoxPlaceholder=Versione
 ContainerStatusEmptyView.ContainerNotInUseMessage=Questa unità di distribuzione non è attualmente utilizzata da nessun server remoto.
@@ -52,15 +52,15 @@ ContainerStatusEmptyView.Documentation=documentazione
 ContainerStatusEmptyView.LearnMoreMessage=Puoi saperne di più su questo argomento nella
 ContainerStatusEmptyView.NoRemoteServers=Nessun server remoto
 ContainerStatusEmptyView.Refresh=Aggiorna
-ContainerView.Alias=Alias dell'unità di distribuzione
+ContainerView.Alias=Alias dell''unità di distribuzione
 ContainerView.ArtifactId=ID artefatto:
-ContainerView.ConfirmRemovePopupMessage=Sei sicuro di voler rimuovere l'unità di distribuzione corrente?
+ContainerView.ConfirmRemovePopupMessage=Sei sicuro di voler rimuovere l''unità di distribuzione corrente?
 ContainerView.ConfirmRemovePopupTitle=Rimuovi unità di distribuzione
 ContainerView.GroupId=ID gruppo:
 ContainerView.ProcessConfig=Configurazione processo
 ContainerView.Refresh=Aggiorna
 ContainerView.Remove=Rimuovi
-ContainerView.RemoveContainerErrorMessage=Impossibile eliminare l'unità di distribuzione.
+ContainerView.RemoveContainerErrorMessage=Impossibile eliminare l''unità di distribuzione.
 ContainerView.RemoveContainerSuccessMessage=Unità di distribuzione eliminata.
 ContainerView.Start=Avvia
 ContainerView.StartContainerErrorMessage=Avvio unità di distribuzione fallito.
@@ -85,8 +85,8 @@ NewContainerFormView.NewContainerWizardSaveSuccess=Nuova unità di distribuzione
 NewContainerFormView.NewContainerWizardTitle=Nuova unità di distribuzione
 NewContainerFormView.TitleText=Unità di distribuzione
 NewContainerFormView.Version=Versione
-NewContainerFormView.StartContainerText=Avviare l'unità di distribuzione?
-NewContainerFormView.ProductionModeSupportsDoesntSnapshots=I server in modalità PRODUZIONE non consentono l'uso di artefatti SNAPSHOT.
+NewContainerFormView.StartContainerText=Avviare l''unità di distribuzione?
+NewContainerFormView.ProductionModeSupportsDoesntSnapshots=I server in modalità PRODUZIONE non consentono l''uso di artefatti SNAPSHOT.
 NewTemplateView.Capabilities=Funzionalità:
 NewTemplateView.InvalidErrorMessage=Nome non valido.
 NewTemplateView.Name=Nome:
@@ -110,10 +110,10 @@ RemoteEmptyView.NoAssociatedContainers=Nessuna unità di distribuzione associata
 RemoteEmptyView.NoAssociatedContainersMessage=Questo server remoto non ha unità di distribuzione associate. Puoi creare unità di distribuzione su questo server aggiungendole alla configurazione del server corrispondente.
 RemoteView.Refresh=Aggiorna
 RemoteView.RemoteInstanceRemoveSuccess=Istanza remota rimossa.
-RemoteView.RemoteInstanceRemoveError=Impossibile rimuovere l'istanza remota.
+RemoteView.RemoteInstanceRemoveError=Impossibile rimuovere l''istanza remota.
 RemoteView.Remove=Rimuovi
 ServerContainerEmptyView.AddContainer=Aggiungi unità di distribuzione
-ServerContainerEmptyView.AddKieContainer=aggiungi un'unità di distribuzione
+ServerContainerEmptyView.AddKieContainer=aggiungi un''unità di distribuzione
 ServerContainerEmptyView.Documentation=documentazione
 ServerContainerEmptyView.LearnMoreMessage=Puoi saperne di più su questo argomento nella
 ServerContainerEmptyView.NoAssociatedContainersMessage=Questa configurazione attualmente non ha unità di distribuzione. Per iniziare,
@@ -144,13 +144,13 @@ ClientContainerRuntimeOperation.UpgradeContainer=Aggiorna unità di distribuzion
 ClientContainerRuntimeOperation.Scan=Scansiona
 ClientContainerRuntimeOperation.StartScanner=Avvia scanner
 ClientContainerRuntimeOperation.StopScanner=Arresta scanner
-ContainerUpdateEvent.ErrorMessage=L'operazione '{0}' ha fallito in {1} istanze del server.
-ContainerUpdateEvent.WarnMessage=L'operazione '{0}' potrebbe aver fallito in alcune delle {1} istanze del server.
-ContainerUpdateEvent.SuccessMessage=L'operazione '{0}' è stata eseguita con successo, {1} istanze del server sono state interessate.
+ContainerUpdateEvent.ErrorMessage=L''operazione '{0}' ha fallito in {1} istanze del server.
+ContainerUpdateEvent.WarnMessage=L''operazione '{0}' potrebbe aver fallito in alcune delle {1} istanze del server.
+ContainerUpdateEvent.SuccessMessage=L''operazione '{0}' è stata eseguita con successo, {1} istanze del server sono state interessate.
 NewContainer.GAVNotExist=GAV '{0}' non trovato nel repository Maven.
 NewContainer.GAVNotExist.Save=GAV '{0}' non trovato nel repository Maven. Sei sicuro di volerlo distribuire? 
 NewContainer.Save=Ok
 NewContainer.SaveContainerSpec=Salva specifica unità di distribuzione
 NewContainer.Deploying={0} in fase di distribuzione
-NewContainer.FailedContainer=L'unità di distribuzione ha avuto un errore sul server KIE.
-CanNot_Stop_Container=Impossibile fermare l'unità di distribuzione a causa dell'istanza di processo in esecuzione.
+NewContainer.FailedContainer=L''unità di distribuzione ha avuto un errore sul server KIE.
+CanNot_Stop_Container=Impossibile fermare l''unità di distribuzione a causa dell''istanza di processo in esecuzione.
