--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_it.properties
@@ -46,8 +46,8 @@ WorkbenchRootNodeName=Workbench
 DataModelerEditSources=Modifica Codice Sorgente
 ResourcePlanner=Pianificazione Risorse
 WorkbenchRootNodeHelp=Permessi generali del workbench, non legati a un tipo di risorsa specifico.
-DataModelerEditSourcesHelp=Abilita la modifica del codice sorgente generato dal Data Modeler. Il codice sorgente è disponibile nella scheda "Sorgente" nell'editor del Data Modeler.
-ResourcePlannerHelp=Abilita il supporto di Planner, come le annotazioni di dominio, l'editor del solver, ...
+DataModelerEditSourcesHelp=Abilita la modifica del codice sorgente generato dal Data Modeler. Il codice sorgente è disponibile nella scheda "Sorgente" nell''editor del Data Modeler.
+ResourcePlannerHelp=Abilita il supporto di Planner, come le annotazioni di dominio, l''editor del solver, ...
 PermissionAllow=Consenti
 PermissionDeny=Nega
 Admin=Amministratore
@@ -58,8 +58,8 @@ Users=Utenti
 Library=Progetti
 MavenRepositoryPagedJarTableDownloadJar=Scarica JAR
 MavenRepositoryPagedJarTableDownloadJarHelp=Abilita il download di JAR dal Repository Artefatti
-KieServerError403=Non hai accesso per caricare dati dal server remoto. Contatta l'amministratore di sistema.
-KieServerError401=Credenziali non valide per caricare dati dal server remoto. Contatta l'amministratore di sistema.
+KieServerError403=Non hai accesso per caricare dati dal server remoto. Contatta l''amministratore di sistema.
+KieServerError401=Credenziali non valide per caricare dati dal server remoto. Contatta l''amministratore di sistema.
 Help=Aiuto
 Artifacts=Artefatti
 EditGlobalPreferences=Modifica Preferenze Globali
@@ -75,11 +75,11 @@ StunnerDesigner=Editor Process Designer
 SSHKeys=Chiavi SSH
 StunnerDesignerPreferences=Process Designer
 SessionTimeout=Timeout Sessione
-InvalidBusResponseProbablySessionTimeout=Risposta non valida ricevuta dal server. Molto probabilmente significa che sei stato disconnesso a causa di inattività. Vuoi effettuare nuovamente l'accesso?
+InvalidBusResponseProbablySessionTimeout=Risposta non valida ricevuta dal server. Molto probabilmente significa che sei stato disconnesso a causa di inattività. Vuoi effettuare nuovamente l''accesso?
 LayoutEditorComponentPalette=Componenti
 ExperimentalSettings=Impostazioni Sperimentali
-ErrorDetailsSuccessfullyCopiedToClipboard=I dettagli dell'errore sono stati copiati negli appunti.
-ErrorDetailsFailedToBeCopiedToClipboard=Impossibile copiare i dettagli dell'errore negli appunti perché questo browser non lo supporta.
+ErrorDetailsSuccessfullyCopiedToClipboard=I dettagli dell''errore sono stati copiati negli appunti.
+ErrorDetailsFailedToBeCopiedToClipboard=Impossibile copiare i dettagli dell''errore negli appunti perché questo browser non lo supporta.
 ScenarioSimulationEditor=Scenari di Test
 ProcessAdministration=Amministrazione Processo
 TestReport=Report di Test
@@ -96,5 +96,5 @@ ShowChangeRequestTabHelp=Permesso di mostrare o nascondere la scheda richieste d
 ShowProjectToolbar=Mostra barra degli strumenti progetto
 ShowProjectToolbarHelp=Permesso di mostrare la barra degli strumenti progetto che contiene i pulsanti Test, Build e Deploy
 DisconnectedFromServer=Disconnesso dal server
-CouldNotConnectToServer=Impossibile connettersi al server. Molto probabilmente si tratta di un problema di rete. Vuoi ricaricare l'applicazione?
+CouldNotConnectToServer=Impossibile connettersi al server. Molto probabilmente si tratta di un problema di rete. Vuoi ricaricare l''applicazione?
 Archetypes=Archetipi
