--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_it.properties
@@ -27,14 +27,14 @@ MarshallingResponsePopup.InfoMessageLabel=Informazione
 MarshallingResponsePopup.UnknownMessageLabel=Sconosciuto
 
 MarshallingMessage.boundaryIgnored=Il collegamento di confine è stato ignorato. Elemento di confine: {0}, Genitore: {1}
-MarshallingMessage.associationIgnored=L'associazione è stata ignorata. Sorgente: {0}, Destinazione: {1}
+MarshallingMessage.associationIgnored=L''associazione è stata ignorata. Sorgente: {0}, Destinazione: {1}
 MarshallingMessage.sequenceFlowIgnored=Il flusso di sequenza è stato ignorato. Sorgente: {0}, Destinazione: {1}
-MarshallingMessage.collapsedElementExpanded=L'elemento compresso {0} di tipo {1} è stato espanso
-MarshallingMessage.ignoredElement=L'elemento {0} di tipo {1} è stato ignorato
-MarshallingMessage.ignoredUnknownElement=L'elemento sconosciuto {0} è stato ignorato
+MarshallingMessage.collapsedElementExpanded=L''elemento compresso {0} di tipo {1} è stato espanso
+MarshallingMessage.ignoredElement=L''elemento {0} di tipo {1} è stato ignorato
+MarshallingMessage.ignoredUnknownElement=L''elemento sconosciuto {0} è stato ignorato
 MarshallingMessage.childLaneSetConverted=Il set di Lane figlio {0} è stato convertito in Lane {1}
-MarshallingMessage.convertedElement=L'elemento {0} di tipo {1} è stato convertito in {2}
-MarshallingMessage.elementFailure=Errore sull'elemento {0} di tipo {1}
+MarshallingMessage.convertedElement=L''elemento {0} di tipo {1} è stato convertito in {2}
+MarshallingMessage.elementFailure=Errore sull''elemento {0} di tipo {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Esiste un oggetto dati con lo stesso nome e tipo diverso - Verrà cambiato in (Object)
 MarshallingMessage.dataObjectWithName=Oggetto dati-Nome
 MarshallingMessage.dataObjectWithInvalidName=Esiste un oggetto dati con nome non valido. I caratteri illegali verranno sostituiti con -
@@ -44,6 +44,6 @@ SessionCardinalityStateHandler.EmptyStateCaption=Fai clic, trascina o interagisc
 SessionCardinalityStateHandler.EmptyStateMessage=Per iniziare, fai clic o trascina un nodo dalla palette a sinistra sulla tela
 
 DownloadDiagram=Scarica diagramma
-DiagramParsingError=Si è verificato un errore durante l'analisi del diagramma. Potrebbero esserci nodi non ancora supportati dall'editor o il contenuto XML può contenere errori. Puoi provare a ripararlo manualmente. {0}
+DiagramParsingError=Si è verificato un errore durante l''analisi del diagramma. Potrebbero esserci nodi non ancora supportati dall''editor o il contenuto XML può contenere errori. Puoi provare a ripararlo manualmente. {0}
 ScreenExplorerTitle=Esplora diagramma
 Documentation=Documentazione
