--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_it.properties
@@ -21,4 +21,4 @@ MarshallingMessage.ignoredElement=Elemento "{0}" di tipo {1} è stato ignorato
 MarshallingMessage.ignoredUnknownElement=Elemento sconosciuto "{0}" è stato ignorato
 MarshallingMessage.childLaneSetConverted=Child Lane Set {0} è stato convertito in Lane
 MarshallingMessage.convertedElement=Elemento {0} di tipo {1} è stato convertito in {2}
-MarshallingMessage.elementFailure=Errore sull'elemento {0} di tipo {1}
+MarshallingMessage.elementFailure=Errore sull''elemento {0} di tipo {1}
