--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-core-common/src/main/resources/org/kie/workbench/common/stunner/core/resources/i18n/StunnerCoreConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-core-common/src/main/resources/org/kie/workbench/common/stunner/core/resources/i18n/StunnerCoreConstants_it.properties
@@ -36,21 +36,21 @@ org.kie.workbench.common.stunner.core.rule.success=Validazione riuscita
 org.kie.workbench.common.stunner.core.rule.fail=Validazione non riuscita
 org.kie.workbench.common.stunner.core.rule.element=[{0}]\n {1}
 org.kie.workbench.common.stunner.core.rule.property=Proprietà '{0}' {1}.
-org.kie.workbench.common.stunner.core.client.mediator.zoomArea=Seleziona un'area per ingrandire
+org.kie.workbench.common.stunner.core.client.mediator.zoomArea=Seleziona un''area per ingrandire
 
 
 #######################
 # Rule Violation Types
 #######################
 org.kie.workbench.common.stunner.core.rule.violations.ContainmentRuleViolation=Il '{0}' non può accettare il contenimento per i ruoli candidati '{1}'
-org.kie.workbench.common.stunner.core.rule.violations.DockingRuleViolation=Il '{0}' non accetta l'ancoraggio dei ruoli candidati '{1}'
+org.kie.workbench.common.stunner.core.rule.violations.DockingRuleViolation=Il '{0}' non accetta l''ancoraggio dei ruoli candidati '{1}'
 org.kie.workbench.common.stunner.core.rule.violations.ConnectionRuleViolation=La connessione non è consentita per il bordo con ruolo '{0}'. Le connessioni consentite sono '{1}'
 org.kie.workbench.common.stunner.core.rule.violations.CardinalityMinRuleViolation=Il diagramma deve contenere un minimo di {1} occorrenze per uno dei seguenti ruoli '{0}'. Attualmente trovate {2} occorrenza/e
 org.kie.workbench.common.stunner.core.rule.violations.CardinalityMaxRuleViolation=Il diagramma deve contenere un massimo di {1} occorrenze per uno dei seguenti ruoli '{0}'. Attualmente trovate {2} occorrenza/e
 org.kie.workbench.common.stunner.core.rule.violations.EdgeCardinalityMinRuleViolation=Il nodo con ruoli '{0}', può avere un minimo di {3} occorrenze per {1} bordo/i per la direzione '{2}'. Attualmente trovate {4} occorrenze
 org.kie.workbench.common.stunner.core.rule.violations.EdgeCardinalityMaxRuleViolation=Il nodo con ruoli '{0}', può avere un massimo di {3} occorrenze per {1} bordo/i per la direzione '{2}'. Attualmente trovate {4} occorrenze
 org.kie.workbench.common.stunner.core.rule.violations.ContextOperationNotAllowedViolation=Operazione {0} non consentita
-org.kie.workbench.common.stunner.core.rule.violations.EmptyConnectionViolation=Sia le connessioni devono essere presenti per il connettore '{0}'. Attuale [origine='{1}', destinazione='{2}']
+org.kie.workbench.common.stunner.core.rule.violations.EmptyConnectionViolation=Sia le connessioni devono essere presenti per il connettore '{0}'. Attuale [sorgente='{1}', destinazione='{2}']
 
 #######################
 # Toolbox
@@ -75,13 +75,13 @@ org.kie.workbench.common.stunner.core.client.toolbox.ExportSVG=Scarica come SVG
 org.kie.workbench.common.stunner.core.client.toolbox.ExportBPMN=Scarica come BPMN
 org.kie.workbench.common.stunner.core.client.toolbox.Redo=Ripeti [Ctrl+Shift+z]
 org.kie.workbench.common.stunner.core.client.toolbox.Save=Salva
-org.kie.workbench.common.stunner.core.client.toolbox.SwitchGrid=Cambia griglia
+org.kie.workbench.common.stunner.core.client.toolbox.SwitchGrid=Passa alla griglia
 org.kie.workbench.common.stunner.core.client.toolbox.Undo=Annulla [Ctrl+z]
 org.kie.workbench.common.stunner.core.client.toolbox.Validate=Valida
 org.kie.workbench.common.stunner.core.client.toolbox.VisitGraph=Riproduci
 org.kie.workbench.common.stunner.core.client.toolbox.PerformAutomaticLayout=Esegui layout automatico
 
-org.kie.workbench.common.stunner.core.client.toolbox.ConfirmClearDiagram=L'eliminazione del diagramma rimuoverà tutti gli oggetti dal canvas in modo permanente. Non sarà possibile annullare questa azione. Procedere con cautela.
+org.kie.workbench.common.stunner.core.client.toolbox.ConfirmClearDiagram=La cancellazione del diagramma rimuoverà tutti gli oggetti dal canvas in modo permanente. Non sarà possibile annullare questa azione. Procedere con cautela.
 
 ########################
 #ClientDiagramService
