--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-project/kie-wb-common-stunner-project-client/src/main/resources/org/kie/workbench/common/stunner/project/client/resources/i18n/StunnerProjectClientConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-project/kie-wb-common-stunner-project-client/src/main/resources/org/kie/workbench/common/stunner/project/client/resources/i18n/StunnerProjectClientConstants_it.properties
@@ -16,10 +16,10 @@
 
 org.kie.workbench.common.stunner.project.client.editor.DownloadDiagram=Scarica diagramma
 org.kie.workbench.common.stunner.project.client.editor.ConfirmAction=Conferma azione
-org.kie.workbench.common.stunner.project.client.editor.OnErrorConfirmUndoLastAction=Si è verificato un errore [{0}]. Vuoi annullare l'ultima azione?
+org.kie.workbench.common.stunner.project.client.editor.OnErrorConfirmUndoLastAction=Si è verificato un errore [{0}]. Vuoi annullare l''ultima azione?
 org.kie.workbench.common.stunner.project.client.editor.DiagramSaveSuccessful=Diagramma salvato con successo
 org.kie.workbench.common.stunner.project.client.editor.DiagramEditorDefaultTitle=Editor diagramma del progetto
-org.kie.workbench.common.stunner.project.client.editor.DiagramParsingError=Si è verificato un errore durante l'analisi del diagramma. Potrebbero esserci nodi bpm non ancora supportati dalla versione corrente del Process Designer, o il contenuto xml potrebbe contenere errori. Puoi provare ad aprire il file con il Legacy Process Designer o ripararlo manualmente. {0}
+org.kie.workbench.common.stunner.project.client.editor.DiagramParsingError=Si è verificato un errore durante l''analisi del diagramma. Potrebbero esserci nodi bpm non ancora supportati dalla versione corrente del Process Designer, o il contenuto xml potrebbe contenere errori. Puoi provare ad aprire il file con il Legacy Process Designer o ripararlo manualmente. {0}
 org.kie.workbench.common.stunner.project.client.editor.Print=Stampa
 
 
