--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_it.properties
@@ -42,20 +42,20 @@ No_Data_Output=nessun output dati
 Only_single_entry_allowed=Solo una voce consentita
 Ok=OK
 Source=Origine
-assignment_source_help=L'origine della variabile di input può essere una variabile, una costante o un'espressione.
+assignment_source_help=L''origine della variabile di input può essere una variabile, una costante o un''espressione.
 Target=Destinazione
-assignment_target_help=La destinazione della variabile di output può essere una variabile o un'espressione.
+assignment_target_help=La destinazione della variabile di output può essere una variabile o un''espressione.
 This_input_should_be_entered_as_a_property_for_the_task=Questo input deve essere inserito come proprietà per il task
 Removed_invalid_characters_from_name=Caratteri non validi rimossi dal nome
 Removed_invalid_characters_from_value=Caratteri non validi rimossi dal valore
 A_Data_Input_with_this_name_already_exists=Esiste già un input dati con questo nome
 ProcessModel=Modello di Processo
-ConfirmCloseBusinessProcessEditor=Il processo aziendale potrebbe contenere modifiche non salvate. Sei sicuro di voler chiudere l'editor?
+ConfirmCloseBusinessProcessEditor=Il processo aziendale potrebbe contenere modifiche non salvate. Sei sicuro di voler chiudere l''editor?
 DeleteDiagramVariableError=Questa variabile di processo non può essere eliminata perché è utilizzata in uno o più task o altri nodi di processo. Per eliminare la variabile, elimina prima le variabili di assegnazione dei task o qualsiasi altro utilizzo nei nodi di processo.
 RenameDiagramVariableError=Questa variabile di processo non può essere rinominata perché è utilizzata in uno o più task o altri nodi di processo. Per rinominare la variabile, elimina prima le variabili di assegnazione dei task o qualsiasi altro utilizzo nei nodi di processo.
 DuplicatedVariableNameError=Una variabile con questo nome: {0} esiste già
 DuplicatedAttributeNameError=Un attributo con questo nome: {0} esiste già
-AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=Il nome dell'assegnazione: {0} è già utilizzato come input o output dati di istanza multipla nel nodo corrente.
+AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=Il nome dell''assegnazione: {0} è già utilizzato come input o output dati di istanza multipla nel nodo corrente.
 Imports=Importazioni
 No_Imports=Nessuna importazione
 No_Data_Type_Import=Nessuna importazione di tipo di dati
@@ -66,7 +66,7 @@ No_WSDL_Import=Nessuna importazione WSDL
 WSDL_Import=1 importazione WSDL
 WSDL_Imports=importazioni WSDL
 WSDL_Imports_Title=Importazioni WSDL
-Duplicate_Import=Un'importazione con la stessa posizione ({0}) e namespace ({1}) esiste già.
+Duplicate_Import=Un''importazione con la stessa posizione ({0}) e namespace ({1}) esiste già.
 Location=Posizione
 Namespace=Namespace
 ClassName=Nome Classe
@@ -80,7 +80,7 @@ message=Messaggio
 toUsers=A: utente(i)
 toGroups=A: gruppo(i)
 toEmails=A: email
-subjectPlaceholder=Inserisci qui l'oggetto.
+subjectPlaceholder=Inserisci qui l''oggetto.
 emailsPlaceholder=Inserisci le email separate da virgola.
 bodyPlaceholder=Inserisci il corpo del messaggio qui.
 taskStateType=Tipo di stato del task
