--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_it.properties
@@ -50,11 +50,11 @@ ItemMovedSuccessfully=Elemento spostato con successo.
 ItemValidatedSuccessfully=Elemento convalidato con successo.
 ItemPathSubheading=Percorso:
 ItemUndefinedPath=<Nessun percorso selezionato>
-ItemRestored=Elemento ricaricato a causa di un'operazione di ripristino.
+ItemRestored=Elemento ricaricato a causa di un''operazione di ripristino.
 AddAnOptionalCheckInComment=Aggiungi un commento facoltativo per il check-in
 CheckIn=Check-in
 RefreshingList=Aggiornamento elenco...
-UnableToLoadList=Impossibile caricare l'elenco...
+UnableToLoadList=Impossibile caricare l''elenco...
 Cancel=Annulla
 Name=Nome
 WholeNumberInteger=Numero intero
@@ -66,7 +66,7 @@ DeleteItem=Elimina elemento
 RuleAsset=Asset di regola
 NewItem=Nuovo elemento
 New=Nuovo
-AElementToDelInCollectionList=Un elemento da eliminare nell'elenco di raccolta
+AElementToDelInCollectionList=Un elemento da eliminare nell''elenco di raccolta
 AddElementBelow=Aggiungi elemento sotto
 MoveDownListMove=Sposta in basso
 MoveUpList=Sposta in alto
@@ -97,7 +97,7 @@ LineNoneLine=- Nessuno -
 UploadSelectAFile=Seleziona un file da caricare.
 UploadFileTypeNotSupported=Il tipo di file non è supportato.
 UploadFileTypeSupportedExtensions0=Il tipo di file deve essere {0}.
-UploadGenericError=Si è verificato un errore nell'apertura del foglio di lavoro. È possibile che la codifica del documento non corrisponda alla codifica del lettore o che il contenuto non sia nel formato XLS97.
+UploadGenericError=Si è verificato un errore nell''apertura del foglio di lavoro. È possibile che la codifica del documento non corrisponda alla codifica del lettore o che il contenuto non sia nel formato XLS97.
 NoSuchFileTabTitle=Non trovato.
 NoSuchFileMessage=File non trovato. Verificare che il file esista nella versione selezionata.
 Overview=Panoramica
