--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/HumanReadableConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/HumanReadableConstants_it.properties
@@ -54,8 +54,8 @@ andOverlappedBy=e sovrapposto da
 andStarts=e inizia
 andStartedBy=e iniziato da
 AnyOf1=Qualsiasi delle seguenti è vera
-isContainedInTheFollowingList=è contenuto nell'elenco (separato da virgole)
-isNotContainedInTheFollowingList=non è contenuto nell'elenco (separato da virgole)
+isContainedInTheFollowingList=è contenuto nell''elenco (separato da virgole)
+isNotContainedInTheFollowingList=non è contenuto nell''elenco (separato da virgole)
 OverCEPWindow=Sulla finestra scorrevole
 OverCEPWindowTime=Tempo
 OverCEPWindowLength=Lunghezza
