--- a/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_it.properties
@@ -20,8 +20,8 @@ addImportPopupTitle=Aggiungi Importazione
 importTypeIsMandatory=Il tipo di importazione è obbligatorio
 noImportsDefined=Nessuna importazione definita
 remove=Rimuovi
-promptForRemovalOfImport0=Sei sicuro di voler rimuovere l'importazione ''{0}''?
+promptForRemovalOfImport0=Sei sicuro di voler rimuovere l''importazione ''{0}''?
 importType=Tipo
 noTypesAvailable=Nessun tipo disponibile al di fuori del pacchetto
-externalDataObjectsExplanation=Gli oggetti dati esterni sono oggetti dati non definiti esplicitamente all'interno di un progetto o delle dipendenze di un progetto che un autore di regole potrebbe aver bisogno di avere a disposizione. Di solito sono forniti dall'esecuzione di Java. Ad esempio java.util.List.
-importedDataObjectsExplanation=Per impostazione predefinita, solo gli oggetti dati all'interno dello stesso pacchetto dell'asset sono disponibili per l'autore. È possibile importare ulteriori oggetti dati da altri pacchetti.
+externalDataObjectsExplanation=Gli oggetti dati esterni sono oggetti dati non definiti esplicitamente all''interno di un progetto o delle dipendenze di un progetto che un autore di regole potrebbe aver bisogno di avere a disposizione. Di solito sono forniti dall''esecuzione di Java. Ad esempio java.util.List.
+importedDataObjectsExplanation=Per impostazione predefinita, solo gli oggetti dati all''interno dello stesso pacchetto dell''asset sono disponibili per l''autore. È possibile importare ulteriori oggetti dati da altri pacchetti.
