--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieMultipleDocumentEditorConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieMultipleDocumentEditorConstants_it.properties
@@ -24,4 +24,4 @@ NoDocuments.Title=Nessun documento disponibile.
 NoDocuments.Message=Nessun documento aggiuntivo trovato.
 
 SelectDocumentPopupViewImpl.Title=Documenti disponibili.
-SelectDocumentPopupViewImpl.SelectDocument=Seleziona un documento da aprire nell'editor.
+SelectDocumentPopupViewImpl.SelectDocument=Seleziona un documento da aprire nell''editor.
