--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_it.properties
@@ -22,11 +22,11 @@ CreatedOnMetaData=Creato il
 CreatedByMetaData=Creato da
 FormatMetaData=Formato
 OtherMetaData=Altri metadati
-AShortDescriptionOfTheSubjectMatter=Una breve descrizione dell'argomento
+AShortDescriptionOfTheSubjectMatter=Una breve descrizione dell''argomento
 TypeMetaData=Tipo
 TypeTip=Questo serve per scopi di classificazione
 ExternalLinkMetaData=Link esterno
-ExternalLinkTip=Questo serve per collegare l'asset a un sistema esterno
+ExternalLinkTip=Questo serve per collegare l''asset a un sistema esterno
 SourceMetaData=Origine
 SourceMetaDataTip=Una breve descrizione o codice che indica la fonte della regola
 VersionHistory=Storico versioni
@@ -55,7 +55,7 @@ LockMetaData=Stato blocco
 LockedByHint=Bloccato da
 LockedByHintOwned=Bloccato da te
 UnlockedHint=Non bloccato
-ForceUnlockCaption=Sblocca forzatamente l'asset
+ForceUnlockCaption=Sblocca forzatamente l''asset
 TagsMetaData=Tag
 AddNewTag=Aggiungi nuovi tag
 RemoveThisTag=Rimuovi questo tag
