--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_it.properties
@@ -26,7 +26,7 @@ modelEditor_saving=Salvataggio del modello dati del progetto
 modelEditor_saving_error=Si è verificato un errore durante il salvataggio
 modelEditor_loading=Caricamento del modello dati del progetto
 modelEditor_loading_error=Si è verificato un errore durante il caricamento del file
-modelEditor_deleting_error=Si è verificato un errore durante l'eliminazione del file
+modelEditor_deleting_error=Si è verificato un errore durante l''eliminazione del file
 modelEditor_propertyType_loading_error=Si è verificato un errore durante il caricamento dei tipi di campo di base dal server
 modelEditor_annotationDef_loading_error=Si è verificato un errore durante il caricamento delle definizioni di annotazione dal server
 modelEditor_projectPath_calc_error=Si è verificato un errore durante il calcolo del percorso del progetto corrente
@@ -49,8 +49,8 @@ prima di passare da: \n\nprogetto: {0} \n\na\n\nprogetto: {1}
 modelEditor_confirm_save_model_before_project_change=Il modello dati del progetto corrente è stato <B><I>modificato</I></B>, \
 vuoi che le tue modifiche siano <B><I>salvate</I></B> prima di <B><I>cambiare</I></B> da:</BR>progetto: {0}</BR>a</BR>progetto: {1} ?
 
-modelEditor_confirm_save_model_before_project_change_force=L'utente {0} ha <B><I>aggiornato</I></B> il modello dati del progetto {1}, \
-probabilmente in un'altra sessione o editor.</BR>\
+modelEditor_confirm_save_model_before_project_change_force=L''utente {0} ha <B><I>aggiornato</I></B> il modello dati del progetto {1}, \
+probabilmente in un''altra sessione o editor.</BR>\
 Vuoi <B><I>forzare</I></B> il salvataggio delle tue modifiche prima di <B><I>cambiare</I></B> progetto?
 
 modelEditor_notify_project_change_=Il progetto corrente verrà cambiato da: \n\nprogetto: {0} \n\na\n\nprogetto: {1}
@@ -62,8 +62,8 @@ modelEditor_notify_readonly_objects_read=Gli oggetti dati seguenti sono stati cr
 modelEditor_notify_externally_modified_objects_read=Gli oggetti dati seguenti sono stati modificati da un editor esterno. \
 Le modifiche locali su questi oggetti potrebbero sovrascrivere le modifiche esterne quando il modello viene generato.
 
-modelEditor_notification_dataObject_created=L'oggetto dati {0} è stato creato
-modelEditor_notification_dataObject_deleted=L'oggetto dati {0} è stato eliminato
+modelEditor_notification_dataObject_created=L''oggetto dati {0} è stato creato
+modelEditor_notification_dataObject_deleted=L''oggetto dati {0} è stato eliminato
 modelEditor_notification_dataModel_generated=Il modello dati è stato generato
 modelEditor_notification_dataModel_loaded=Il modello dati per il progetto {0} è stato caricato dal server
 modelEditor_notification_dataModel_saved=Il modello dati è stato salvato in {0} secondi
@@ -86,7 +86,7 @@ modelBrowser_createDataObject=Crea nuovo oggetto dati
 modelBrowser_action_deleteDataObject=elimina oggetto
 modelBrowser_columnName=Identificatore
 
-objectBrowser_emptyTable=L'oggetto dati è vuoto
+objectBrowser_emptyTable=L''oggetto dati è vuoto
 objectBrowser_createProperty=Crea nuovo campo
 objectBrowser_create=Crea
 objectBrowser_columnPosition=Posizione
@@ -100,7 +100,7 @@ objectBrowser_labelLabel=Etichetta
 objectBrowser_typeLabel=Tipo
 objectBrowser_typeLabelMultiple=Lista
 objectBrowser_typeLabelMultipleTooltip=Seleziona questa casella di controllo per contenere più elementi per il tipo specificato.
-objectBrowser_labelPlaceholder=Inserisci un'etichetta
+objectBrowser_labelPlaceholder=Inserisci un''etichetta
 objectBrowser_action_createFieldAndContinue=Crea e continua
 objectBrowser_action_createField=Crea
 objectBrowser_action_cancel=Annulla
@@ -112,7 +112,7 @@ objectBrowser_action_add_field=aggiungi campo
 #il valore di questa proprietà dovrebbe essere modificato esternamente
 objectBrowser_readonlyLabel=sola lettura
 objectBrowser_externallyModifiedLabel=modificato esternamente
-objectBrowser_action_goToDataObjectDefinition=Vai alla definizione dell'oggetto dati
+objectBrowser_action_goToDataObjectDefinition=Vai alla definizione dell''oggetto dati
 objectBrowser_message_file_not_exists_or_renamed=Sembra che il file {0} sia stato rinominato o rimosso dal server. \
 Non sarà possibile aprirlo.
 
@@ -131,18 +131,18 @@ Per impostazione predefinita, tutte le dichiarazioni di tipo vengono compilati c
 
 objectEditor_timestampLabel=Timestamp
 objectEditor_timestampHelp=Imposta il "timestamp" per un evento. \
-Se impostato, l'utente può indicare al motore di utilizzare il timestamp dall'attributo dell'evento anziché leggerlo dall'orologio della sessione. \
-Se non impostato, il motore assegnerà automaticamente un timestamp all'evento. \
+Se impostato, l''utente può indicare al motore di utilizzare il timestamp dall''attributo dell''evento anziché leggerlo dall''orologio della sessione. \
+Se non impostato, il motore assegnerà automaticamente un timestamp all''evento. \
 (Vedi Drools Fusion)
 
 objectEditor_durationLabel=Durata
 objectEditor_durationHelp=Imposta la durata per un evento. \
-Se impostato, l'utente può dichiarare quale degli attributi dell'evento contiene la durata dell'evento. \
+Se impostato, l''utente può dichiarare quale degli attributi dell''evento contiene la durata dell''evento. \
 Se non impostato, per impostazione predefinita tutti gli eventi hanno durata 0. \
 (Vedi Drools Fusion)
 
 objectEditor_expiresLabel=Scade
-objectEditor_expiresHelp=Imposta l'"offset di tempo" per la scadenza di un evento.\
+objectEditor_expiresHelp=Imposta l''"offset di tempo" per la scadenza di un evento.\
 Se impostato, questo valore deve essere un intervallo temporale nella forma:</BR>\
 &nbsp;&nbsp;[#g][#o][#m][#s][#[ms]]</BR>\
 Dove [ ] significa un parametro opzionale e # significa un valore numerico.</BR>\
@@ -184,7 +184,7 @@ validPackageHelp=Un nome di pacchetto valido deve avere il seguente formato: {0}
 packageSelector_popup_title=Nuovo pacchetto
 packageSelector_popup_add=Aggiungi
 
-modeler_callback_error=Errore: "{0}". L'errore del server è: "{1}"
+modeler_callback_error=Errore: "{0}". L''errore del server è: "{1}"
 
 usages_popup_title=Utilizzi rilevati
 usages_popup_action_yes_delete_anyway=Sì, elimina comunque
@@ -196,21 +196,21 @@ usages_popup_file_path_column=Percorso
 
 # Messaggi di errore di convalida comuni
 validation_error_invalid_object_identifier=Identificatore oggetto dati non valido: "{0}" non è un identificatore Java valido
-validation_error_missing_object_attribute_type=Il tipo del campo dell'oggetto dati non può essere vuoto
-validation_error_invalid_object_attribute_identifier=Identificatore del campo dell'oggetto dati non valido: "{0}" non è un identificatore Java valido
+validation_error_missing_object_attribute_type=Il tipo del campo dell''oggetto dati non può essere vuoto
+validation_error_invalid_object_attribute_identifier=Identificatore del campo dell''oggetto dati non valido: "{0}" non è un identificatore Java valido
 validation_error_invalid_package_identifier=Identificatore del pacchetto non valido: "{0}" non è un identificatore Java valido
-validation_error_invalid_package_identifier_null=L'identificatore del pacchetto non può essere vuoto.
+validation_error_invalid_package_identifier_null=L''identificatore del pacchetto non può essere vuoto.
 validation_error_no_package_selected=È necessario selezionare un pacchetto.
 validation_error_invalid_position=Posizione specificata non valida, deve essere un numero intero positivo o zero
 validation_error_object_already_exists=Un oggetto dati con identificatore: "{0}" esiste già nel pacchetto: "{1}"
-validation_error_object_attribute_already_exists=Un campo con identificatore: "{0}" esiste già nell'oggetto dati
-validation_error_object_un_managed_attribute_already_exists=Un campo non gestito con identificatore: "{0}" e tipo "{1}" esiste già nell'oggetto dati
-validation_error_cannot_delete_object=L'oggetto dati con identificatore: "{0}" non può essere eliminato perché è ancora referenziato nel modello\:{1}
+validation_error_object_attribute_already_exists=Un campo con identificatore: "{0}" esiste già nell''oggetto dati
+validation_error_object_un_managed_attribute_already_exists=Un campo non gestito con identificatore: "{0}" e tipo "{1}" esiste già nell''oggetto dati
+validation_error_cannot_delete_object=L''oggetto dati con identificatore: "{0}" non può essere eliminato perché è ancora referenziato nel modello\:{1}
 validation_error_cannot_change_object_name=Impossibile modificare il nome di questo oggetto dati perché viene referenziato da altri oggetti dati
 validation_error_cannot_change_object_package=Impossibile modificare il pacchetto di questo oggetto dati perché viene referenziato da altri oggetti dati
 validation_error_illegal_position=Posizione non valida specificata, deve essere zero o un numero intero positivo
 validation_error_cyclic_extension=Estensione ciclica che coinvolge {0} e {1}
-validation_error_invalid_timer_expression=Espressione del timer non valida: {0} non è un'espressione del timer valida
+validation_error_invalid_timer_expression=Espressione del timer non valida: {0} non è un''espressione del timer valida
 validation_error_position_greater_or_equal_than=La posizione "{0}" deve essere un numero intero maggiore o uguale a {1}
 validation_error_position_lower_than=La posizione "{0}" deve essere un numero intero inferiore a {1}
 validation_error_position_already_used_by_fields=La posizione "{0}" è già utilizzata dai seguenti campi: "{1}"
@@ -224,20 +224,20 @@ advanced_domain_wizard_title=Aggiungi nuova annotazione
 advanced_domain_wizard_search_page_title=Carica annotazione
 advanced_domain_wizard_search_page_search_field=Nome della classe di annotazione
 advanced_domain_wizard_search_page_search_field_place_holder=carica nome della classe di annotazione
-advanced_domain_wizard_search_page_search_button_tooltip=Fai clic sul pulsante di ricerca per caricare la definizione dell'annotazione.
-advanced_domain_wizard_search_page_message_annotation_not_loaded=La definizione dell'annotazione non è stata caricata.
-advanced_domain_wizard_search_page_message_annotation_is_loaded=La definizione dell'annotazione è stata caricata correttamente.
+advanced_domain_wizard_search_page_search_button_tooltip=Fai clic sul pulsante di ricerca per caricare la definizione dell''annotazione.
+advanced_domain_wizard_search_page_message_annotation_not_loaded=La definizione dell''annotazione non è stata caricata.
+advanced_domain_wizard_search_page_message_annotation_is_loaded=La definizione dell''annotazione è stata caricata correttamente.
 advanced_domain_wizard_search_page_message_class_not_found=Il nome della classe "{0}" non è stato trovato.\
-Non è stato possibile caricare la definizione dell'annotazione
+Non è stato possibile caricare la definizione dell''annotazione
 
-advanced_domain_wizard_value_pair_editor_page_message_enter_required_value_and_validate=Inserisci il valore obbligatorio per la coppia valore dell'annotazione e premi il pulsante di convalida
-advanced_domain_wizard_value_pair_editor_page_message_enter_optional_value_and_validate=Inserisci un valore opzionale per la coppia valore dell'annotazione e premi il pulsante di convalida
+advanced_domain_wizard_value_pair_editor_page_message_enter_required_value_and_validate=Inserisci il valore obbligatorio per la coppia valore dell''annotazione e premi il pulsante di convalida
+advanced_domain_wizard_value_pair_editor_page_message_enter_optional_value_and_validate=Inserisci un valore opzionale per la coppia valore dell''annotazione e premi il pulsante di convalida
 advanced_domain_wizard_value_pair_editor_page_message_value_validated=La coppia valore è stata convalidata!
 advanced_domain_wizard_value_pair_editor_page_message_value_not_validated=La coppia valore non è convalidata.
 
-advanced_domain_annotation_list_editor_message_confirm_annotation_deletion=Sei sicuro di voler rimuovere l'annotazione: @{0} da {1}.
-advanced_domain_annotation_list_editor_message_value_pair_has_no_default_value=La coppia valore: "{0}" non ha un valore predefinito sulla specifica dell'annotazione @"{1}".\
-Quindi dovrebbe avere un valore ogni volta che l'annotazione viene applicata, se non il codice risultante non sarà valido.
+advanced_domain_annotation_list_editor_message_confirm_annotation_deletion=Sei sicuro di voler rimuovere l''annotazione: @{0} da {1}.
+advanced_domain_annotation_list_editor_message_value_pair_has_no_default_value=La coppia valore: "{0}" non ha un valore predefinito sulla specifica dell''annotazione @"{1}".\
+Quindi dovrebbe avere un valore ogni volta che l''annotazione viene applicata, se non il codice risultante non sarà valido.
 
 advanced_domain_annotation_list_editor_action_add=aggiungi annotazione
 advanced_domain_annotation_list_editor_action_delete=elimina
@@ -266,7 +266,7 @@ persistence_domain_new_resource_option_persistable_help_heading=Persistibile
 
 persistence_domain_new_resource_option_audited=Auditato
 persistence_domain_new_resource_option_audited_help=Un oggetto dati persistibile auditato includerà informazioni aggiuntive \
-  per mantenere le informazioni di audit dell'oggetto. (funziona solo per il provider di persistenza Hibernate)
+  per mantenere le informazioni di audit dell''oggetto. (funziona solo per il provider di persistenza Hibernate)
 persistence_domain_new_resource_option_audited_help_heading=Auditato
 
 persistence_domain_objectEditor_entity_category=Proprietà Entità
@@ -277,7 +277,7 @@ persistence_domain_objectEditor_entity_field_help=Contrassegna questa entità co
 
 persistence_domain_objectEditor_table_field_label=Nome tabella
 persistence_domain_objectEditor_table_field_help_heading=Nome tabella
-persistence_domain_objectEditor_table_field_help=Valore opzionale che imposta il nome della tabella del database per l'oggetto dati specificato.
+persistence_domain_objectEditor_table_field_help=Valore opzionale che imposta il nome della tabella del database per l''oggetto dati specificato.
 
 persistence_domain_objectEditor_audited_field_label=Auditato
 persistence_domain_objectEditor_audited_field_help_heading=Auditato
@@ -286,7 +286,7 @@ persistence_domain_objectEditor_audited_field_help=Contrassegna questo oggetto d
 persistence_domain_objectEditor_on_make_persistable_message=Un oggetto dati già creato sta per essere reso persistibile.</BR>
 
 persistence_domain_objectEditor_required_identifier_is_missing_message=Il campo richiesto <B><I>Identificatore</I></B> non è stato trovato \
-  nell'oggetto dati corrente. <B><I>Vuoi generarlo automaticamente?</I></B></BR></BR>
+  nell''oggetto dati corrente. <B><I>Vuoi generarlo automaticamente?</I></B></BR></BR>
 
 persistence_domain_objectEditor_review_relationship_fields_message=I seguenti campi di relazione potrebbero dover essere \
   revisionati manualmente per aggiungere eventuali opzioni di configurazione di relazione mancanti:
@@ -302,7 +302,7 @@ persistence_domain_objectEditor_review_relationship_fields_message=I seguenti ca
 
   persistence_domain_fieldEditor_identifier_field_label=È identificatore
   persistence_domain_fieldEditor_identifier_field_help_heading=È identificatore
-  persistence_domain_fieldEditor_identifier_field_help=Contrassegna il campo corrente come identificatore dell'oggetto dati. \
+  persistence_domain_fieldEditor_identifier_field_help=Contrassegna il campo corrente come identificatore dell''oggetto dati. \
     Un oggetto dati persistibile dovrebbe avere un solo campo contrassegnato come identificatore e dovrebbe essere un tipo di base Java, \
     come String, Integer, Long, ecc. Un campo che fa riferimento a un oggetto dati o è un campo multiplo non può essere contrassegnato come \
     identificatore. Gli identificatori composti non sono supportati in questa versione.
@@ -310,7 +310,7 @@ persistence_domain_objectEditor_review_relationship_fields_message=I seguenti ca
   persistence_domain_fieldEditor_generation_strategy_field_label=Strategia di generazione
   persistence_domain_fieldEditor_generation_strategy_field_help_heading=Strategia di generazione
   persistence_domain_fieldEditor_generation_strategy_field_help=La strategia di generazione stabilisce come verranno generati automaticamente \
-    i valori degli identificatori quando le istanze dell'oggetto dati vengono create e memorizzate in un database. (ad es. tramite \
+    i valori degli identificatori quando le istanze dell''oggetto dati vengono create e memorizzate in un database. (ad es. tramite \
     i moduli associati ai task umani di jBPM.) Quando viene creato il campo Identificatore predefinito, la strategia di generazione \
     verrà anche configurata automaticamente ed è fortemente consigliato utilizzare questa configurazione.
 
@@ -351,8 +351,8 @@ persistence_domain_objectEditor_review_relationship_fields_message=I seguenti ca
   persistence_domain_fieldEditor_relationship_field_label=Tipo di relazione
   persistence_domain_fieldEditor_relationship_field_help_heading=Tipo di relazione
   persistence_domain_fieldEditor_relationship_field_help=Configura le proprietà di relazione per i campi di tipo oggetto dati, \
-    o una lista di oggetti dati. Se l'oggetto dati corrente è configurato come persistibile, il tipo di relazione verrà \
-    configurato automaticamente quando il campo viene aggiunto all'oggetto dati.
+    o una lista di oggetti dati. Se l''oggetto dati corrente è configurato come persistibile, il tipo di relazione verrà \
+    configurato automaticamente quando il campo viene aggiunto all''oggetto dati.
 
   persistence_domain_id_generator_dialog_title=Strategia di generazione
   persistence_domain_id_generator_dialog_generator_type=Tipo generatore
@@ -394,7 +394,7 @@ persistence_domain_objectEditor_review_relationship_fields_message=I seguenti ca
   persistence_domain_relationship_sequence_generator_dialog_not_configured_label=NON CONFIGURATO
 
 
-  # Proprietà dell'editor del descrittore di persistenza
+  # Proprietà dell''editor del descrittore di persistenza
 
   persistence_descriptor_resource_type_description=Descrittore di persistenza
 
@@ -437,9 +437,9 @@ persistence_domain_objectEditor_review_relationship_fields_message=I seguenti ca
   persistence_descriptor_validation_1001=La classe "{0}" non è stata trovata nel percorso delle classi del progetto corrente
   persistence_descriptor_validation_1002=La classe "{0}" deve essere una classe persistibile
   persistence_descriptor_validation_1003=È stato trovato un nome di classe persistibile vuoto
-  persistence_descriptor_validation_1004=Il descrittore di persistenza deve avere un'unità di persistenza
-  persistence_descriptor_validation_1005=Il nome dell'unità di persistenza deve avere un valore di tipo String non vuoto
-  persistence_descriptor_validation_1006=Il fornitore di persistenza dell'unità di persistenza deve avere un valore di tipo String non vuoto
+  persistence_descriptor_validation_1004=Il descrittore di persistenza deve avere un''unità di persistenza
+  persistence_descriptor_validation_1005=Il nome dell''unità di persistenza deve avere un valore di tipo String non vuoto
+  persistence_descriptor_validation_1006=Il fornitore di persistenza dell''unità di persistenza deve avere un valore di tipo String non vuoto
   persistence_descriptor_validation_1007=La persistenza deve avere un tipo di transazione
   persistence_descriptor_validation_1008=Il tipo di transazione JTA deve avere una Origine dati configurata non vuota
   persistence_descriptor_validation_1009=Il tipo di transazione delle risorse deve avere una Origine dati configurata non vuota
