--- a/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_it.properties
@@ -23,12 +23,12 @@ DataSourceDefMainPanelViewImpl.testConnection=Test di connessione
 DataSourceDefMainPanelViewImpl.emptyOption=Nessuna selezione
 
 DataSourceDefEditor.InvalidNameMessage=È richiesto un nome valido per il data source
-DataSourceDefEditor.InvalidConnectionURLMessage=È richiesta un'URL di connessione valida
+DataSourceDefEditor.InvalidConnectionURLMessage=È richiesta un''URL di connessione valida
 DataSourceDefEditor.InvalidUserMessage=È richiesto un nome utente valido
 DataSourceDefEditor.InvalidPasswordMessage=È richiesta una password valida
 DataSourceDefEditor.DriverRequiredMessage=È richiesto un driver
 DataSourceDefEditor.AllFieldsRequiresValidation=Tutti i campi devono essere validati per salvare la definizione del data source
-DataSourceDefEditor.LoadDriversErrorMessage=Inizializzazione dell'editor non riuscita, impossibile caricare le definizioni dei driver: {0}
+DataSourceDefEditor.LoadDriversErrorMessage=Inizializzazione dell''editor non riuscita, impossibile caricare le definizioni dei driver: {0}
 DataSourceDefEditor.ConnectionTestSuccessfulMessage=Test di connessione riuscito
 DataSourceDefEditor.ConnectionTestFailedMessage=Test di connessione non riuscito
 
@@ -49,7 +49,7 @@ DefEditorActionsPanelViewImpl.deleteAction=Rimuovi
 
 NewDataSourceDefWizard.title=Nuovo data source
 NewDataSourceDefWizard.DataSourceCreatedMessage=Data source: {0} creato con successo
-NewDataSourceDefWizard.DataSourceCreateErrorMessage=Impossibile creare il data source a causa dell'errore seguente: {0}
+NewDataSourceDefWizard.DataSourceCreateErrorMessage=Impossibile creare il data source a causa dell''errore seguente: {0}
 NewDataSourceDefWizard.WizardStartErrorMessage=Inizializzazione della procedura guidata non riuscita, impossibile caricare le definizioni dei driver: {0}
 NewDataSourceDefWizard.FileExistsErrorMessage=File già esistente: {0}
 
@@ -72,12 +72,12 @@ DriverDefEditor.DriverHasDependantsForSaveMessage=Sono state trovate istanze di 
   <BR><BR><B>Vuoi comunque salvare le modifiche?</B>
 
 DriverDefEditor.DriverHasDependantsForDeleteMessage=Sono state trovate istanze di data source che dipendono da questo driver. \
-  <BR>L'eliminazione di questo driver potrebbe lasciarle in uno stato STALE o inconsistente.\
+  <BR>L''eliminazione di questo driver potrebbe lasciarle in uno stato STALE o inconsistente.\
   <BR><BR><B>Vuoi comunque eliminarlo?</B>
 
 NewDriverDefWizard.title=Nuovo driver
 NewDriverDefWizard.DriverCreatedMessage=Driver: {0} creato con successo
-NewDriverDefWizard.DriverCreateErrorMessage=Impossibile creare il driver a causa dell'errore seguente: {0}
+NewDriverDefWizard.DriverCreateErrorMessage=Impossibile creare il driver a causa dell''errore seguente: {0}
 
 DriverDefDefPageViewImpl.pageTitle=Informazioni sul driver
 
