--- a/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants_it.properties
+++ b/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants_it.properties
@@ -16,27 +16,27 @@
 ImpossibleMatch=Corrispondenza impossibile
 RuleHasNoAction=La regola non ha azione
 RuleHasNoRestrictionsAndWillAlwaysFire=La regola non ha restrizioni e si attiverà sempre.
-MultipleValuesForOneAction=Valori multipli per un'azione.
+MultipleValuesForOneAction=Valori multipli per un''azione.
 ConstrainsForFieldXOfFactYAreRedundantTheyWillAlwaysPass=I vincoli per il campo {0} del fatto {1} sono ridondanti. Saranno sempre verificati.
 SubsumptantRows=Righe subsumptant
 DeficientRow=Riga insufficiente.
 ValueForFactFieldIsSetTwice=Il valore per {0}.{1} è impostato due volte.
-ValueForAnActionIsSetTwice=Il valore per un'azione è impostato due volte.
+ValueForAnActionIsSetTwice=Il valore per un''azione è impostato due volte.
 RedundantConditionsNote1P1=I vincoli per il campo {0}.{1} sono ridondanti
 AffectedRows=Righe interessate
 WhenARuleHasNoActionItDoesFireButSinceTheActionSideIsEmptyNothingHappens=Quando una regola non ha azione si attiva, ma poiché il lato azione è vuoto non succede nulla.
 ItIsPossibleThatTheActionsWereLeftOutByAccidentInThisCasePleaseAddThemOtherwiseTheRuleCanNeRemoved=È possibile che le azioni siano state accidentalmente omesse. In tal caso, aggiungerle. Altrimenti, la regola può essere rimossa.
-ProvideAtLeastOneConditionAndOneActionForTheRule=Fornire almeno una condizione e un'azione per la regola.
+ProvideAtLeastOneConditionAndOneActionForTheRule=Fornire almeno una condizione e un''azione per la regola.
 ConflictingRows=Righe in conflitto
 ConflictingRowsP1=Esiste un conflitto tra due righe quando le condizioni per entrambe le regole sono soddisfatte con un insieme di fatti identico, ma le azioni impostano valori diversi per i campi dei fatti esistenti. Le condizioni possono essere ridondanti o subsumptant.
-ConflictingRowsP2=Dato che le azioni fanno cose diverse con le stesse condizioni, è impossibile sapere quali azioni si attivano per ultime. Ciò rende l'insieme di regole inconsistente. Per risolvere il problema, rimuovere una riga o rendere le condizioni più restrittive.
+ConflictingRowsP2=Dato che le azioni fanno cose diverse con le stesse condizioni, è impossibile sapere quali azioni si attivano per ultime. Ciò rende l''insieme di regole inconsistente. Per risolvere il problema, rimuovere una riga o rendere le condizioni più restrittive.
 RedundantRows=Righe ridondanti
-DeficientRowsP1=La regola insufficiente ha azioni che entrano in conflitto con un'altra regola e condizioni che non si sovrappongono con l'altra regola.
-DeficientRowsNoteP1=Il prestito viene approvato se il risparmio supera i 100.000 e viene respinto se lo stipendio è inferiore a 30.000. Potrebbe esserci un richiedente con uno stipendio inferiore a 30.000 e un risparmio superiore a 100.000, in questo caso entrambe le righe si attivano, ma poiché non conosciamo l'ordine di attivazione, è impossibile sapere se la domanda è respinta o approvata.
+DeficientRowsP1=La regola insufficiente ha azioni che entrano in conflitto con un''altra regola e condizioni che non si sovrappongono con l''altra regola.
+DeficientRowsNoteP1=Il prestito viene approvato se il risparmio supera i 100.000 e viene respinto se lo stipendio è inferiore a 30.000. Potrebbe esserci un richiedente con uno stipendio inferiore a 30.000 e un risparmio superiore a 100.000, in questo caso entrambe le righe si attivano, ma poiché non conosciamo l''ordine di attivazione, è impossibile sapere se la domanda è respinta o approvata.
 Salary=Stipendio
 Savings=Risparmio
 ApproveLoan=Approva prestito
-DeficientRowsP2=Dato che la regola insufficiente può attivarsi contemporaneamente a un'altra regola, è impossibile sapere quali azioni si attivano per ultime. Ciò rende l'insieme di regole inconsistente. Per risolvere il problema, rimuovere la regola insufficiente o rendere le condizioni più restrittive.
+DeficientRowsP2=Dato che la regola insufficiente può attivarsi contemporaneamente a un''altra regola, è impossibile sapere quali azioni si attivano per ultime. Ciò rende l''insieme di regole inconsistente. Per risolvere il problema, rimuovere la regola insufficiente o rendere le condizioni più restrittive.
 ImpossibleMatchNote1P1=La corrispondenza impossibile è nella riga {0} per il campo {1} del pattern {2}.
 ImpossibleMatchNote1P2=Le condizioni in conflitto sono {0} e {1}.
 ImpossibleMatchP1=Una regola che ha una corrispondenza impossibile tra le condizioni non si attiva mai. Correggere le condizioni per {0}.
@@ -49,9 +49,9 @@ RedundantConditionsTitle=Condizioni ridondanti
 RedundantConditionsP1=Avere più di una condizione che verifica lo stesso valore non influisce in alcun modo sulla funzionalità della regola, ma ne è sufficiente una sola. Si consiglia di rimuovere eventuali condizioni inutili.
 RedundantConditionsNote1P2=Le condizioni ridondanti sono {0} e {1}
 RedundantRowsP1=La ridondanza esiste quando due righe fanno le stesse azioni con lo stesso insieme di fatti forniti.
-RedundantRowsP2=La ridondanza potrebbe non essere un problema se le regole ridondanti impostano un valore su un fatto esistente, questo imposta il valore due volte. I problemi si verificano quando le due regole aumentano un contatore o aggiungono più fatti nella memoria di lavoro. In entrambi i casi, l'altra riga non è necessaria.
+RedundantRowsP2=La ridondanza potrebbe non essere un problema se le regole ridondanti impostano un valore su un fatto esistente, questo imposta il valore due volte. I problemi si verificano quando le due regole aumentano un contatore o aggiungono più fatti nella memoria di lavoro. In entrambi i casi, l''altra riga non è necessaria.
 RedundantRowsP3=Per risolvere il problema, rimuovere una delle righe ridondanti.
-SubsumptantRowsP1=La subsumption esiste quando una riga fa la stessa cosa di un'altra, con un sottoinsieme dei valori/fatti di un'altra regola.
+SubsumptantRowsP1=La subsumption esiste quando una riga fa la stessa cosa di un''altra, con un sottoinsieme dei valori/fatti di un''altra regola.
 SubsumptantRowsP2=Queste regole potrebbero inserire fatti duplicati nella memoria di lavoro o eseguire funzioni due volte. Se questo non è il comportamento previsto, rimuovere la riga subsumptant o renderla più restrittiva.
 AnalysingChecks0To1Of2=Esecuzione controlli {0} a {1} di {2}...
 MissingRangeTitle=Intervallo mancante
